--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/app.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/app.component.html
@@ -1,3 +1,13 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-split-pane contentId="main-content">
+
+    <ion-menu contentId="main-content">
+      <ion-content>
+        <app-side-menu></app-side-menu>
+      </ion-content>
+    </ion-menu>
+
+    <ion-router-outlet id="main-content"></ion-router-outlet>
+
+  </ion-split-pane>
 </ion-app>
