--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/shared/components/toolbar/toolbar.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>
       {{header}}
     </ion-title>
@@ -12,7 +15,7 @@
       <ion-title size="large">{{header}}</ion-title>
     </ion-toolbar>
   </ion-header>
-  
+
   <ng-content></ng-content>
-  
+
 </ion-content>
