--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/shared/components/side-menu/side-menu.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/shared/components/side-menu/side-menu.component.html
@@ -4,10 +4,12 @@
     <div class="user-name">Tim Kempkens</div>
     <div class="user-mail">tim.kempkens@googlemail.com</div>
     <div class="button-wrapper">
-      <ion-button fill="outline" text-capitalize=“false” size="small">
-        Logout
-        <ion-icon slot="start" name="log-out-outline"></ion-icon>
-      </ion-button>
+      <ion-menu-toggle>
+        <ion-button (click)="logout()" fill="outline" text-capitalize=“false” size="small">
+          Logout
+          <ion-icon slot="start" name="log-out-outline"></ion-icon>
+        </ion-button>
+      </ion-menu-toggle>
     </div>
   </div>
 
