started fixing auth frontend

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/dashboard/dashboard.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
 <app-toolbar [header]="'Dashboard'">
   Dies wird das Dashboard.
+  <ng-container *ngIf="data$ | async as data">
+    <pre>{{data | json}}</pre>
+  </ng-container>
 </app-toolbar>
