more auth staff and UX

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/login/login.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/login/login.component.html
@@ -24,8 +24,8 @@
    </div>
  
    <ion-button type="submit" expand="block" [disabled]="!credentials.valid">Log in</ion-button>
-   <ion-button type="button" expand="block" color="light" fill="clear"
-    >Not yet a member? Sign up!
+   <ion-button routerLink="registration" type="button" expand="block" text-capitalize=“false” fill="clear" class="registration-button">
+    Noch keinen Account? Registriere dich hier!
    </ion-button>
   </form>
  </ion-content>
