--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/login/login.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/login/login.component.html
@@ -1,31 +1,33 @@
 <ion-header>
   <ion-toolbar color="primary">
-   <ion-title>Login</ion-title>
+    <ion-title>Login</ion-title>
   </ion-toolbar>
- </ion-header>
- 
- <ion-content>
+</ion-header>
+
+<ion-content>
   <form (ngSubmit)="login()" [formGroup]="credentials">
-   <div class="input-group">
-    <ion-item>
-     <ion-input aria-label="Email" type="email" placeholder="Email" formControlName="email"></ion-input>
-    </ion-item>
-    <div *ngIf="(email?.dirty || email?.touched) && email?.errors" class="errors">
-     <span *ngIf="email?.errors?.['required']">Email is required</span>
-     <span *ngIf="email?.errors?.['email']">Email is invalid</span>
+    <div class="input-group">
+      <ion-item>
+        <ion-input aria-label="Email" type="email" placeholder="Email" formControlName="email"></ion-input>
+      </ion-item>
+      <div *ngIf="(email?.dirty || email?.touched) && email?.errors" class="errors">
+        <span *ngIf="email?.errors?.['required']">Email wird benötigt. </span>
+      </div>
+      <ion-item>
+        <app-show-hide-password>
+          <ion-input aria-label="Passwort" type="password" placeholder="Passwort"
+            formControlName="password"></ion-input>
+        </app-show-hide-password>
+      </ion-item>
+      <div *ngIf="(password?.dirty || password?.touched) && password?.errors" class="errors">
+        <span *ngIf="password?.errors?.['required']">Passwort wird benötigt.</span>
+      </div>
     </div>
-    <ion-item>
-     <ion-input aria-label="Password" type="password" placeholder="Password" formControlName="password"></ion-input>
-    </ion-item>
-    <div *ngIf="(password?.dirty || password?.touched) && password?.errors" class="errors">
-     <span *ngIf="password?.errors?.['required']">Password is required</span>
-     <span *ngIf="password?.errors?.['minlength']">Password needs to be 6 characters</span>
-    </div>
-   </div>
- 
-   <ion-button type="submit" expand="block" [disabled]="!credentials.valid">Log in</ion-button>
-   <ion-button routerLink="registration" type="button" expand="block" text-capitalize=“false” fill="clear" class="registration-button">
-    Noch keinen Account? Registriere dich hier!
-   </ion-button>
+
+    <ion-button type="submit" expand="block" [disabled]="!credentials.valid">Log in</ion-button>
+    <ion-button routerLink="registration" type="button" expand="block" text-capitalize=“false” fill="clear"
+      class="registration-button">
+      Noch keinen Account? Registriere dich hier!
+    </ion-button>
   </form>
- </ion-content>
+</ion-content>
