imaplemented mail service

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/login/login.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/login/login.component.html
@@ -29,5 +29,9 @@
       class="registration-button">
       Noch keinen Account? Registriere dich hier!
     </ion-button>
+    <ion-button routerLink="reset-password" type="button" expand="block" text-capitalize=“false” fill="clear"
+      class="registration-button">
+      Passwort vergessen? Resete dein Passwort hier!
+    </ion-button>
   </form>
 </ion-content>
