emial confirmation page

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/login/login.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/login/login.component.html
@@ -31,7 +31,7 @@
     </ion-button>
     <ion-button routerLink="reset-password" type="button" expand="block" text-capitalize=“false” fill="clear"
       class="registration-button">
-      Passwort vergessen? Resete dein Passwort hier!
+      Passwort vergessen?
     </ion-button>
   </form>
 </ion-content>
