--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/registration/registration.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/registration/registration.component.html
@@ -47,6 +47,6 @@
       </div>
     </div>
 
-    <ion-button type="submit" expand="block" [disabled]="!registerForm.valid">Registriere dich</ion-button>
+    <ion-button slot="bottom" type="submit" expand="block" [disabled]="!registerForm.valid">Registriere dich</ion-button>
   </form>
 </ion-content>
