implemented forget password frontend

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/forgot-password/forgot-password.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/forgot-password/forgot-password.component.html
@@ -1,3 +1,37 @@
-<p>
-  forgot-password works!
-</p>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Resete Passwort</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <form (ngSubmit)="resetPassword()" [formGroup]="credentials">
+    <div class="input-group">
+      <ion-item>
+        <app-show-hide-password>
+          <ion-input aria-label="Passwort" type="password" placeholder="Passwort"
+            formControlName="password"></ion-input>
+        </app-show-hide-password>
+      </ion-item>
+      <div *ngIf="(password?.dirty || password?.touched) && password?.errors" class="errors">
+        <span *ngIf="password?.errors?.['required']">Passwort wird benötigt.</span>
+      </div>
+
+      <ion-item>
+        <app-show-hide-password>
+          <ion-input aria-label="Passwort" type="password" placeholder="Bestätige Passwort"
+            formControlName="confirmPassword"></ion-input>
+        </app-show-hide-password>
+      </ion-item>
+      <div *ngIf="(confirmPassword?.dirty || confirmPassword?.touched) && confirmPassword?.errors" class="errors">
+        <span *ngIf="confirmPassword?.errors?.['required']">Passwort Bestätigung wird benötigt.</span>
+      </div>
+    </div>
+
+    <ion-button type="submit" expand="block" [disabled]="!credentials.valid">Resete Passwort</ion-button>
+  </form>
+  <ion-button routerLink="/auth/" type="button" expand="block" fill="clear"
+    class="back-to-login-button">
+    Zurück zum Login
+  </ion-button>
+</ion-content>
