--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/registration/registration.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/registration/registration.component.scss
@@ -26,3 +26,10 @@ ion-content {
   color: #ffffffb8;
   margin-top: 16px;
 }
+
+.back-to-login-button{
+  position: absolute;
+  bottom: 32px;
+  left: 0;
+  right: 0;
+}
