added autorization and roles

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/shared/components/side-menu/side-menu.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/shared/components/side-menu/side-menu.component.html
@@ -21,16 +21,19 @@
       </ion-label>
     </ion-item>
   </ion-menu-toggle>
-  <ion-list-header>
-    Verwaltung
-  </ion-list-header>
-  <ion-menu-toggle autoHide="false" *ngFor="let p of managementPages; let i = index">
-    <ion-item [routerLink]="p.url" routerLinkActive="selected" routerDirection="root" detail="false">
-      <ion-icon slot="start" [name]="p.icon + '-outline'"></ion-icon>
-      <ion-label>
-        {{p.title}}
-      </ion-label>
-    </ion-item>
-  </ion-menu-toggle>
+
+  <ng-container *ngIf="rolesService.isCurrentUserAdmin">
+    <ion-list-header>
+      Verwaltung
+    </ion-list-header>
+    <ion-menu-toggle autoHide="false" *ngFor="let p of managementPages; let i = index">
+      <ion-item [routerLink]="p.url" routerLinkActive="selected" routerDirection="root" detail="false">
+        <ion-icon slot="start" [name]="p.icon + '-outline'"></ion-icon>
+        <ion-label>
+          {{p.title}}
+        </ion-label>
+      </ion-item>
+    </ion-menu-toggle>
+  </ng-container>
 
 </ion-list>
