--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/shared/components/toolbar/toolbar.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/shared/components/toolbar/toolbar.component.html
@@ -6,6 +6,9 @@
     <ion-title>
       {{header}}
     </ion-title>
+    <ion-buttons *ngIf="showBack" slot="end">
+      <ion-button (click)="cancel()" [strong]="true">Zurück</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
