--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/account-details/account-details.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/account-details/account-details.component.scss
@@ -2,3 +2,14 @@
   display: flex;
   justify-content: end;
 }
+
+ion-button {
+  text-transform: none;
+  margin-top: 16px;
+}
+
+.icon {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
