--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/container/login/login.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/container/login/login.component.html
@@ -25,11 +25,11 @@
     </div>
 
     <ion-button type="submit" expand="block" [disabled]="!credentials.valid">Log in</ion-button>
-    <ion-button routerLink="registration" type="button" expand="block" text-capitalize=“false” fill="clear"
+    <ion-button routerLink="registration" type="button" expand="block" fill="clear"
       class="registration-button">
       Noch keinen Account? Registriere dich hier!
     </ion-button>
-    <ion-button (click)="forgotPassword()" type="button" expand="block" text-capitalize=“false” fill="clear"
+    <ion-button (click)="forgotPassword()" type="button" expand="block" fill="clear"
       class="registration-button">
       Passwort vergessen?
     </ion-button>
