--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/account-details/account-details.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/account-details/account-details.component.html
@@ -2,6 +2,10 @@
 
   <ng-container *ngIf="data$ | async as data; else loading">
     <ion-card>
+      <ion-button class="icon" fill="clear" (click)="setOpen(true)">
+        Test
+        <!-- <ion-icon slot="icon-only" name="pencil"></ion-icon> -->
+      </ion-button>
       <ion-card-header>
         <ion-card-title>{{data.orchesterMitgliedsName}}</ion-card-title>
       </ion-card-header>
@@ -28,14 +32,22 @@
           </ion-select>
         </ion-item>
         <div class="button-div">
-          <ion-button type="submit" fill="clear" [disabled]="!roleFormGroup.valid || !roleFormGroup.touched">Speichern</ion-button>
+          <ion-button type="submit" fill="clear"
+            [disabled]="!roleFormGroup.valid || !roleFormGroup.touched">Speichern</ion-button>
         </div>
       </form>
     </ion-card>
+
+    <!-- <ion-button expand="block">Entferne Lockout</ion-button>
+    <ion-button expand="block">Erneuere Registrierungsschlüssel</ion-button>
+
+    <ion-button color="danger" expand="block">Lösche User</ion-button> -->
+    <!-- <ion-button id="open-action-sheet">Open</ion-button> -->
+    <ion-action-sheet [isOpen]="isActionSheetOpen" header="Actions" [buttons]="actionSheetButtons"  (didDismiss)="setOpen(false)"></ion-action-sheet>
   </ng-container>
 
   <ng-template #loading>
     LADEN
   </ng-template>
-
 </app-toolbar>
+
