--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/account-management/account-management.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/account-management/account-management.component.html
@@ -1,9 +1,30 @@
-<app-toolbar [header]="'Accountverwaltung'">
-  <ng-container *ngIf="data$ | async as data">
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Accountverwaltung
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 
-    <app-account-card *ngFor="let accountInfo of data" [routerLink]="'details/' + accountInfo.orchesterMitgliedsId"
+<ion-content [fullscreen]="true" class="ion-padding">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Accountverwaltung</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <ng-container *ngIf="displayedData; else loading">
+    <ion-searchbar #searchBar show-clear-button="always" placeholder="Suche Account" (ionInput)="search($event)"></ion-searchbar>
+    <app-account-card *ngFor="let accountInfo of displayedData" [routerLink]="'details/' + accountInfo.orchesterMitgliedsId"
       [name]="accountInfo.orchesterMitgliedsName" [email]="accountInfo.email" [lastLogin]="accountInfo.lastLogin" [color]="accountInfo | getCardColor">
     </app-account-card>
-
   </ng-container>
-</app-toolbar>
+
+  <ng-template #loading>
+    <app-loader></app-loader>
+  </ng-template>
+
+</ion-content>
