--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/anwesenheit/components/anwesenheits-liste/anwesenheits-liste.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/anwesenheit/components/anwesenheits-liste/anwesenheits-liste.component.html
@@ -1,3 +1,21 @@
-<app-toolbar [header]="'Anwesenheit'">
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Anwesenheit
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true" class="ion-padding">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Anwesenheit</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
   Dies wird die Anwesenheitsliste.
-</app-toolbar>
+
+</ion-content>
