--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/settings/settings.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/settings/settings.component.html
@@ -1,3 +1,21 @@
-<app-toolbar [header]="'Einstellungen'">
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Einstellungen
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true" class="ion-padding">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Einstellungen</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
   Dies werden die Einstellungen.
-</app-toolbar>
+
+</ion-content>
