--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/user-help/user-help.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/user-help/user-help.component.html
@@ -1,3 +1,21 @@
-<app-toolbar [header]="'Hilfe'">
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Hilfe
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true" class="ion-padding">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Hilfe</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
   Hier kommen Anleitungen hin, wie die App zu bedienen ist.
-</app-toolbar>
+
+</ion-content>
