--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/termin-liste/termin-liste.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/termin-liste/termin-liste.component.html
@@ -1,3 +1,21 @@
-<app-toolbar [header]="'Termine'">
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Termine
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true" class="ion-padding">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Termine</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
   Dies wird die Terminliste.
-</app-toolbar>
+
+</ion-content>
