--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/presentational/contact-item/contact-item.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/presentational/contact-item/contact-item.component.html
@@ -6,10 +6,15 @@
     <h2>
       <strong>{{name}}</strong>
     </h2>
-    <ion-text style="font-size: 14px;">Instrument: {{instruments}}</ion-text><br />
-    <ion-note color="medium" class="ion-text-wrap">
+    <ion-text style="font-size: 14px;">Instrument: {{instruments ?? 'unbekannnt'}}</ion-text><br />
+    <ion-note color="medium" class="ion-text-wrap" *ngIf="memberSince; else memberSinceUnknown">
       Mitglied seit: {{memberSince}} Jahren
     </ion-note>
+    <ng-template #memberSinceUnknown>
+      <ion-note color="medium" class="ion-text-wrap">
+        Mitglied seit: unbekannt
+      </ion-note>
+    </ng-template>
   </ion-label>
   <div class="metadata-end-wrapper" slot="end">
     <ion-icon color="medium" name="chevron-forward"></ion-icon>
